# BoltConn

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md  build.rs
.github/workflows/: check.yml  release.yml
boltadm/: Cargo.toml
boltadm/src/: cert.rs  clean.rs  main.rs  request.rs  request_uds.rs  request_web.rs
boltapi/: Cargo.toml
boltapi/src/: instrument.rs  lib.rs  multiplex.rs  rpc.rs  schema.rs
boltconn/: Cargo.toml
boltconn-helper/: Cargo.toml
boltconn-helper/src/: main.rs
boltconn/src/: app.rs  main.rs
boltconn/src/adapter/: chain.rs  direct.rs  http.rs  mod.rs  nat_adapter.rs  shadowsocks.rs  socks5.rs  ssh.rs  tcp_adapter.rs  trojan.rs  tun_adapter.rs  udp_adapter.rs  udp_over_tcp.rs  wireguard.rs
boltconn/src/cli/: approve.rs  cert.rs  clean.rs  mod.rs  request.rs  request_uds.rs  request_web.rs  run.rs  streaming.rs
boltconn/src/common/: async_raw_fd.rs  async_session.rs  async_socket.rs  async_ws_stream.rs  buf_pool.rs  call_chan.rs  client_hello.rs  domain_name.rs  duplex_chan.rs  evictable_vec.rs  host_matcher.rs  hostname_parse.rs  id_gen.rs  mod.rs  sync.rs  utils.rs
boltconn/src/config/: bootstrap.rs  config.rs  error.rs  file_path.rs  inbound.rs  init.rs  interception.rs  mod.rs  module.rs  proxy_chain.rs  proxy_group.rs  proxy_provider.rs  rule.rs  rule_provider.rs  state.rs
boltconn/src/config/default/: config.yml  state.yml
boltconn/src/dispatch/: action.rs  configuration.rs  dispatch.rs  dispatching.rs  inbound.rs  instrument.rs  mod.rs  proxy.rs  rule.rs  ruleset.rs  temporary.rs
boltconn/src/eavesdrop/: eavesdrop_modifier.rs  header_rewrite.rs  http_eavesdrop.rs  https_eavesdrop.rs  mod.rs  modifier.rs  url_rewrite.rs
boltconn/src/instrument/: action.rs  bus.rs  mod.rs  request_action.rs
boltconn/src/intercept/: header_engine.rs  header_rewrite.rs  http_intercept.rs  https_intercept.rs  intercept_manager.rs  intercept_modifier.rs  mod.rs  modifier.rs  script_engine.rs  url_engine.rs  url_rewrite.rs
boltconn/src/mitm/: header_rewrite.rs  http_mitm.rs  https_mitm.rs  mitm_modifier.rs  mod.rs  modifier.rs  pkt_coll.rs  url_rewrite.rs
boltconn/src/network/: configure.rs  dhcp.rs  egress.rs  global_setting.rs  mod.rs  tun_device.rs  unix_tun.rs  windows_tun.rs
boltconn/src/network/dns/: bootstrap.rs  dns.rs  dns_table.rs  hijack_ctrl.rs  hosts.rs  mod.rs  ns_policy.rs  provider.rs
boltconn/src/network/icmp/: mod.rs
boltconn/src/network/packet/: icmp.rs  ip.rs  mod.rs  transport_layer.rs
boltconn/src/platform/: dhcp.rs  mod.rs  route.rs
boltconn/src/platform/process/: linux.rs  macos.rs  mod.rs  tag.rs  token.rs  windows.rs
boltconn/src/platform/sys/: linux_sys.rs  macos_sys.rs  mod.rs  unix_sys.rs  windows_sys.rs
boltconn/src/proxy/: agent.rs  context.rs  dispatcher.rs  error.rs  http_inbound.rs  manager.rs  mixed_inbound.rs  mod.rs  nat.rs  session.rs  session_ctl.rs  socks5_inbound.rs  statistics.rs  tun_inbound.rs  tun_udp_inbound.rs  udp_inbound.rs
boltconn/src/session/: dispatcher.rs  mod.rs  nat.rs  session.rs
boltconn/src/sniff/: http_sniffer.rs  https_sniffer.rs  mod.rs  modifier.rs  pkt_coll.rs
boltconn/src/transport/: mod.rs  smol.rs  ssh.rs  trojan.rs  wireguard.rs
boltconnctl/: Cargo.toml
boltctl/: Cargo.toml
boltctl/src/: cert.rs  main.rs  request.rs
bolthelper/: Cargo.toml
boltmgr/: Cargo.toml
boltmgr/src/: cert.rs  main.rs  request.rs
catalyst/: Cargo.toml
catalyst-helper/: Cargo.toml
catalyst-helper/src/: main.rs
catalyst/src/: main.rs
catalyst/src/adapter/: mod.rs
catalyst/src/dispatch/: dispatcher.rs
catalyst/src/network/: egress.rs  tun_device.rs
catalyst/src/network/packet/: ip.rs
catalyst/src/platform/process/: mod.rs
catalyst/src/platform/sys/: mod.rs
catalyst/src/sniff/: http_sniffer.rs
catalystctl/: Cargo.toml
docs/: TODO.md  comparison.md  config-basics.md  config.md  configuration.md  design.md  features.md  inbound.md  index.md  install.md  instrument.md  proxy-group.md  proxy-provider.md  proxy.md  restful.md  rule.md
docs/archive/: dns.md  index.md  intercept_module.md  interception.md  module.md  proxy-local.md  rule-local.md  rule-provider.md
examples/: config.yml  state.yml
examples/Remote/: US.yaml
examples/Rules/: Telegram
examples/cert/: key.pem
examples/config/: config.yml
examples/config/Module/: google.yaml
examples/data/: state.yml
examples/data/cert/: crt.pem
src/: main.rs
src/adapter/: direct.rs  mod.rs  tun_adapter.rs
src/common/: buf_pool.rs  buf_slab.rs  duplex_chan.rs  mod.rs
src/config/: config.rs
src/dispatch/: dispatcher.rs  mod.rs
src/dns/: dns.rs  dns_table.rs  mod.rs
src/iface/: async_socket.rs  mod.rs  route.rs  tun_device.rs
src/iface/linux/: c_ffi.rs  mod.rs  tun.c
src/iface/macos/: c_ffi.rs  mod.rs  tun.c
src/inspect/: mod.rs
src/network/: async_raw_fd.rs  async_socket.rs  egress.rs  mod.rs  outbound.rs  route.rs  tun_device.rs
src/network/dns/: dns.rs  dns_table.rs  mod.rs
src/network/linux/: mod.rs
src/network/macos/: mod.rs
src/network/packet/: ip.rs  transport_layer.rs
src/outbound/: direct.rs  mod.rs
src/packet/: buf_pool.rs  ip.rs  ipv4.rs  ipv6.rs  mod.rs  state.rs  tcp.rs  transport_layer.rs
src/platform/: mod.rs  route.rs
src/platform/linux/: mod.rs
src/platform/macos/: mod.rs
src/platform/process/: linux.rs  macos.rs
src/platform/sys/: linux_sys.rs  macos_sys.rs
src/process/: linux.rs  macos.rs
src/resource/: buf_slab.rs  mod.rs  state.rs
src/session/: manager.rs  mod.rs  nat.rs  session.rs  session_ctl.rs
src/session_mgr/: mod.rs
src/sniff/: https_sniffer.rs
src/sniff/http/: mock_server.rs  mocker.rs  mod.rs
tests/config/: config.yml  state.yml
tests/config/Rules/: socks.yml
tests/config/cert/: crt.pem  key.pem
tests/runnable/: mock_http.py  socks.sh
tests/runnable/dns/: Dockerfile  mock_dns.py  run.sh
tests/runnable/shadowsocks/: config.json  run.sh
tests/runnable/trojan/: run.sh  server.yaml
tests/runnable/wireguard/: docker-compose.yaml  server-wg0.conf
