[workspace]
members = [
    "boltapi",
    "boltconn",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = false
strip = true

[profile.dev]
opt-level = 0
debug = true

[patch.crates-io]
rustls = { git = "https://github.com/XOR-op/rustls.delta.git", branch = "unofficial-rel-0.23" }
smoltcp = { git = "https://github.com/XOR-op/smoltcp.git", branch = "resize-recv-buffer" }
