[package]
name = "boltadm"
version = "0.1.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
boltapi = { path = "../boltapi" }
colored = "2.0.0"
ipnet = "2.7.0"
is-root = "0.1.2"
rcgen = "0.10.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0.148"
serde_json = "1.0.89"
structopt = "0.3.26"
tabular = "0.2.0"
tokio = { version = "1.24.1", features = ["rt"] }
