[package]
name = "boltapi"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
futures = "0.3.28"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
tarpc = { version = "0.37.0", default-features = false }
thiserror = "1.0.40"