[package]
name = "boltconn"
version = "0.5.0"
edition = "2021"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.2"
anyhow = "1.0.66"
arc-swap = "1.6.0"
arrayref = "0.3.6"
async-recursion = "1.0.4"
async-trait = "0.1.58"
axum = { version = "0.6.18", features = ["ws"] }
base64 = "0.21.0"
boltapi = { path = "../boltapi" }
boringtun = "0.5.3"
byteorder = "1.4.3"
bytes = "1.2.1"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
colored = "2.0.0"
dashmap = "5.4.0"
fast-socks5 = "0.8.1"
fastrand = "2.0.0"
flume = "0.10.14"
futures = "0.3.25"
http = "0.2.8"
httparse = "1.8.0"
hyper = { version = "0.14.27", features = ["stream", "server", "client", "http1", "http2"] }
ioctl-sys = "0.8.0"
ipnet = "2.5.1"
ip_network = "0.4.1"
ip_network_table = "0.2.0"
is-root = "0.1.2"
libc = "0.2.141"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
maxminddb = "0.23.0"
nix = "0.26.2"
radix_trie = "0.2.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rcgen = { version = "0.11.0", features = ["pem", "x509-parser"] }
regex = "1.7.0"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rustls-pemfile = "1.0.1"
scopeguard = "1.1.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
sha2 = "0.10.6"
shadowsocks = { version = "1.16.0", default-features = false }
socket2 = { version = "0.5.1", features = ["all"] }
smoltcp = "0.9.0"
structopt = "0.3.26"
tabular = "0.2.0"
tarpc = { version = "0.33.0", features = ["serde-transport", "unix", "serde-transport-bincode"] }
thiserror = "1.0.37"
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "net", "sync", "io-util", "macros", "signal", "time"] }
tokio-rustls = { version = "0.24.0", features = ["dangerous_configuration"] }
tokio-tungstenite = "0.19.0"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std", "fmt", "json"] }
trust-dns-proto = "0.23.0"
trust-dns-resolver = { version = "0.23.0", features = ['dns-over-rustls', 'dns-over-https-rustls', 'dns-over-https', 'dns-over-tls'] }
url = "2.3.1"
webpki-roots = "0.25.2"
x25519-dalek = "2.0.0-pre.1"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.13.0"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = "0.8.3"
netlink-packet-core = "0.5.0"
netlink-packet-sock-diag = "0.4.0"
procfs = "0.15.1"
