[package]
name = "boltconn"
version = "0.6.1"
edition = "2021"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
# Core
anyhow = "1.0.66"
arc-swap = "1.6.0"
arrayref = "0.3.6"
async-trait = "0.1.58"
axum = { version = "0.6.18", features = ["ws"] }
base64 = "0.21.0"
boltapi = { path = "../boltapi" }
bytes = "1.2.1"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "std"] }
dashmap = "5.5.3"
fastrand = "2.0.0"
flume = "0.11.0"
futures = "0.3.25"
http = "0.2.8"
httparse = "1.8.0"
hyper = { version = "0.14.27", features = ["stream", "server", "client", "http1", "http2"] }
ioctl-sys = "0.8.0"
ipnet = "2.5.1"
ip_network = "0.4.1"
ip_network_table = "0.2.0"
is-root = "0.1.3"
libc = "0.2.141"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
nix = "0.26.2"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.7.0"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "json"] }
scopeguard = "1.1.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
socket2 = { version = "0.5.1", features = ["all"] }
tarpc = { version = "0.33.0", features = ["serde-transport", "unix"] }
thiserror = "1.0.37"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "net", "sync", "io-util", "macros", "signal", "time"] }
tokio-rustls = { version = "0.24.0", features = ["dangerous_configuration"] }
tokio-serde = { version = "0.8.0", features = ["cbor"] }
tokio-tungstenite = "0.20.1"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std", "fmt", "json"] }
trust-dns-proto = "0.23.0"
trust-dns-resolver = { version = "0.23.0", features = ['dns-over-rustls', 'dns-over-https-rustls', 'dns-over-https', 'dns-over-tls'] }
url = "2.3.1"
# Rules
async-recursion = "1.0.4"
maxminddb = "0.23.0"
radix_trie = "0.2.1"
# Interception
aho-corasick = "1.0.2"
brotli = "3.4.0"
flate2 = "1.0.28"
rcgen = { version = "0.11.0", features = ["pem", "x509-parser"] }
rquickjs = { version = "0.4.0-beta.4", features = ["bindgen", "futures", "macro", "classes"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rustls-pemfile = "1.0.1"
webpki-roots = "0.25.2"
x25519-dalek = "2.0.0-pre.1"
# Proxies
fast-socks5 = "0.9.1"
boringtun = "0.6.0"
sha2 = "0.10.6"
shadowsocks = { version = "1.16.0", default-features = false }
smoltcp = "0.9.0"
# Command line
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.0"
tabular = "0.2.0"

# features(tokio-console)
console-subscriber = { version = "0.1.10", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.13.0"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = "0.8.3"
netlink-packet-core = "0.5.0"
netlink-packet-sock-diag = "0.4.0"
procfs = "0.15.1"

[dev-dependencies]
tracing-test = "0.2.4"