[package]
name = "boltconn"
version = "0.10.1"
edition = "2021"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
internal-test = []

[dependencies]
# Core
anyhow = "1.0.66"
arc-swap = "1.6.0"
arrayref = "0.3.6"
async-trait = "0.1.58"
axum = { version = "0.7.5", features = ["ws"] }
base64 = "0.21.0"
boltapi = { path = "../boltapi" }
bytes = "1.2.1"
chrono = { version = "0.4.31", default-features = false, features = [
    "clock",
    "std",
] }
dashmap = "5.5.3"
dhcproto = "0.12.0"
fastrand = "2.0.0"
flume = "0.11.0"
futures = "0.3.25"
http = "1.1.0"
httparse = "1.8.0"
ipnet = "2.5.1"
ip_network = "0.4.1"
ip_network_table = "0.2.0"
is-root = "0.1.3"
libc = "0.2.141"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
nix = { version = "0.29.0", features = ["user", "fs"] }
pnet_datalink = "0.35.0"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.7.0"
sharded-slab = "0.1.7"
socket2 = { version = "0.5.1", features = ["all"] }
thiserror = "1.0.37"
tokio = { version = "1.40.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
    "io-util",
    "macros",
    "signal",
    "time",
] }
tokio-rustls = "0.26.0"
tokio-tungstenite = "0.23.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "std",
    "fmt",
    "json",
] }
hickory-proto = "0.24.0"
hickory-resolver = { version = "0.24.0", features = [
    'dns-over-rustls',
    'dns-over-https-rustls',
    'dns-over-https',
    'dns-over-tls',
    'webpki-roots',
] }
url = "2.3.1"
# Configuration
reqwest = { version = "0.12.2", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
tarpc = { version = "0.33.0", features = ["serde-transport", "unix"] }
tokio-serde = { version = "0.8.0", features = ["cbor"] }
tower-http = { version = "0.5.2", features = ["cors"] }
# Rules
async-recursion = "1.0.4"
maxminddb = "0.23.0"
radix_trie = "0.2.1"
# Interception
aho-corasick = "1.0.2"
brotli = "3.4.0"
flate2 = "1.0.28"
http-body = "1.0.0"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1.11", features = ["http1", "http2"] }
ja-tools = { git = "https://github.com/XOR-op/ja-tools.git", branch = "main" }
rcgen = { version = "0.12.1", features = ["pem", "x509-parser"] }
rquickjs = { version = "0.6.2", features = [
    "bindgen",
    "futures",
    "macro",
    "classes",
] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rustls-pemfile = "2.1.1"
webpki-roots = "0.26.1"
x25519-dalek = "2.0.1"
interpolator = "0.5.0"
# Proxies
fast-socks5 = "0.9.1"
boringtun = "0.6.0"
sha2 = "0.10.8"
shadowsocks = { version = "1.16.0", default-features = false }
smoltcp = { version = "0.12.0", features = ["socket-tcp-cubic"] }
# Command line
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.3"
colored = "2.0.0"
tabular = "0.2.0"
git-version = "0.3.9"
const_format = "0.2.34"

# features(tokio-console)
console-subscriber = { version = "0.1.10", optional = true }
russh = "0.45.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Wdk",
    "Wdk_System",
    "Wdk_System_Threading",
    "Win32_System",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_ProcessStatus",
] }
wintun = { version = "0.5.0", features = ["panic_on_unsent_packets"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
ioctl-sys = "0.8.0"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.13.0"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = "0.8.3"
netlink-packet-core = "0.5.0"
netlink-packet-sock-diag = "0.4.0"
procfs = "0.16.0"
mimalloc = "0.1.43"

[dev-dependencies]
tracing-test = "0.2.4"
