[package]
name = "boltctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boltapi = { path = "../boltapi" }
tokio = { version = "1.22.0", features = ["rt"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0.148"
serde_json = "1.0.89"
structopt = "0.3.26"
colored = "2.0.0"
anyhow = "1.0.66"
rcgen = "0.10.0"
